# WinNetHost

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
.github/workflows/: cmake.yml
source/NativeHost/: CMakeLists.txt  CMakePresets.json  NativeHost.csproj  NativeHost.vs.vcxproj  app.manifest  error_handling.ixx  gui.ixx  gui.rc  hostfxr.ixx  main.cpp  nativehost.cpp  nethelper.cpp  nethelper.h  patch-runtime.cpp  patch-runtime.h  process.ixx  resource.h  safe_load_dll_feature.ixx  shell.ixx  text.ixx  vcpkg.json
source/NativeHost/Properties/: launchSettings.json
